--- a/index.html
+++ b/index.html
@@ -188,9 +188,8 @@
       <div class="col-md-4 footer__item center-block text-center">
         <ul class="footer__item--links">
           <li><a href="contacto.html">Contacto</a></li>
-          <li><a href="registrarse.html">Registrarse</a></li>
-          <li><a href="#">Terminos y Condiciones</a></li>
-          <li><a href="#">Politica de privacidad</a></li>
+          <li><a href="registrarse.html">Registrarse/Iniciar sesión</a></li>
+          <li><a href="terminos.html">Terminos y Condiciones</a></li>
         </ul>
       </div>
       <div class="col-md-4 footer__item center-block text-center">
